--- a/public/components/basic/scene-3d.html
+++ b/public/components/basic/scene-3d.html
@@ -58,8 +58,8 @@
 
 
     </script>
-    <div class="relative w-full h-[700px]">
-        <div id="canvas_wrapper" class="absolute top-0 left-0">
+    <div class="relative w-full h-[350px]">
+        <div id="canvas_wrapper" class="absolute top-0 left-0 h-[350px]">
             <slot></slot>
         </div>
         <div
