--- a/public/components/basic/todo-component.html
+++ b/public/components/basic/todo-component.html
@@ -1,4 +1,11 @@
 <template id="todo-component" adv>
+    <style>
+        @scope{
+            :scope{
+                padding:20px;
+            }
+        }
+    </style>
     <script>
         // "self", "refs", "data", "states" are injected here
         // self: the component itself
@@ -55,9 +62,9 @@
         //  we return the scope to make it accessible in to the event handlers of the refs
         return scope;
     </script>
-
     <dialog id="todo_dialog" class="w-[min(100vw,500px)] h-[min(100vh,500px)]">
         <form id="new_todo_form" method="dialog" onsubmit="scope.addTodo(event)">
+            <label for="todo">Enter label</label>
             <input type="text" name="todo" id="todo_name_input" placeholder="Add a todo">
             <input type="submit" value="Submit">
         </form>
@@ -65,7 +72,7 @@
     <section>
 
         <div>
-            <button id="add_btn" onclick="refs.todo_dialog.showModal()">Add Todo</button>
+            <button id="add_btn" class="px-4 py-2 text-white bg-blue-500" onclick="refs.todo_dialog.showModal()">Add Todo</button>
         </div>
         <adv-view id="todo_view">
             <ul class="max-w-[500px]">
@@ -74,7 +81,7 @@
                     class="flex justify-between mx-5 p-5">
 
                     <input id="title_{{id}}" data-id="{{id}}" name=" title {{id}}" value="{{title}}" type="text"
-                        class="text-black" onchange="scope.renameTodo(el.closest('li'), el.value)">
+                        class="text-black h-12 px-2" onchange="scope.renameTodo(el.closest('li'), el.value)">
                     <style>
                         @scope {
 
