--- a/public/components/basic/tw-button.html
+++ b/public/components/basic/tw-button.html
@@ -1,6 +1,6 @@
 <template id="tw-button" adv>
-    <button class="px-4 py-2 text-white bg-[blue]">
-        <slot>My button</slot>
+    <button class="bg-[red]">
+       Hello
     </button>
 </template>
 
