--- a/src/style.css
+++ b/src/style.css
@@ -30,9 +30,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   line-height: 1.5;
-  color: white;
-  background-color: #131313;
-  background-image: linear-gradient(180deg, var(--primary), transparent);
   padding: 0;
   margin: 0;
 
@@ -58,7 +55,6 @@ ul {
 }
 a {
   text-decoration: none;
-  color: white;
   transition: text-decoration 0.2s ease-in-out;
   &:hover {
     text-decoration: underline;
@@ -67,61 +63,7 @@ a {
 
 }
 
-.hero {
-  background-image: linear-gradient(227deg, #7d0000ee, #010020cc),
-    url("/img/abstract.jpg");
-  color: white;
-  & .content {
-    animation: panIn 0.5s ease-in-out;
-  }
-  @keyframes panIn {
-    from {
-      transform: translateY(-100%);
-    }
-    to {
-      transform: translateY(0);
-    }
-  }
-}
 
-@scope(header){
- /* Defaults */
- :scope{
-  position:sticky;
-  top:0;
-  left:0;
-  width:100%;
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 0.75rem;
-  border-bottom: 1px solid #ddd;
-  
-  backdroup-filter: blur(10px); 
-  & nav{
-    padding-inline: 2rem;
-  }
-  & ul{
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-}
-
-/*** Desktop ***/
-@media (min-width: 768px) {
-  :scope {
-  
-  }
-}
-/*** Mobile ***/
-  @media (max-width: 768px) {
-    :scope {
-      display: flex;
-    }
-  }
-}
 .container{
   margin-inline: auto;
   max-width:var(--container-width, 1200px);
@@ -134,24 +76,13 @@ section {
     margin-top: 1rem;
   }
   &:not(:last-of-type) {
+    &::after {
+      content: "";
+      display: block;
+      height: 1px;
+      background-color: var(--tertiary);
+      margin-top: 1rem;
+    }
     margin-bottom: 1rem;
-  }
-}
-
-.hero{
-  background-image: linear-gradient(227deg, #7d0000ee, #010020cc),
-    url("/img/abstract.jpg");
-  color: white;
-  & .content {
-    animation: panIn 0.5s ease-in-out;
-    padding-block: 2rem;
-  }
-  @keyframes panIn {
-    from {
-      transform: translateY(-100%);
-    }
-    to {
-      transform: translateY(0);
-    }
   }
 }
