--- a/project/public/components/kit/like-button.html
+++ b/project/public/components/kit/like-button.html
@@ -30,6 +30,8 @@
     <button class="reaction">🤯</button>
     <button class="reaction">😉</button>
     <button class="reaction" selected>💖</button>
+    <button class="reaction">🤡</button>
+    <button class="reaction">😓</button>
 
   </div>
   <style>
