--- a/project/public/components/app/todo-component.html
+++ b/project/public/components/app/todo-component.html
@@ -8,10 +8,49 @@
 
     /** @type {Refs} */;
     const { todos_view } = refs 
-    const { getState, setState, subscribe } = createStore((s, g) => ({
+    const { getState, setState, subscribe } = self.createStore((set, get) => ({
       name: "Todo List",
-      todos: [
-        { id: "1", title: "Todo 1", complete: true, tag: "fun" },
+      todos: [],
+      initiated: false,
+      init:(data) => set({ todos: data, initiated: true }), 
+      getTags: () => get().todos.map((todo) => todo.tag),
+      addTodo: (todo) => set({ todos: [...get().todos, todo] }),
+      removeTodo: (id) => set({ todos: get().todos.filter((todo) => todo.id !== id) }),
+      updateTitle: (id, title) =>
+        set({
+          todos: get().todos.map((todo) =>
+            todo.id === id ? { ...todo, title } : todo
+          ),
+        }),
+      updateComplete: (id, complete) =>
+        set({
+          todos: get().todos.map((todo) =>
+            todo.id === id
+              ? {
+                  ...todo,
+                  complete,
+                }
+              : todo
+          ),
+        }),
+    }));
+
+    let first_render = true;
+    subscribe((state, prevState) => {
+      //  changing complete
+      if (state.todos.length !== prevState.todos.length || first_render) {
+        self.view_list.forEach((v) => v.render(state));
+        first_render = false;
+      }
+    },{
+      fireImmediately: true
+    });
+    // render all the views
+
+    // we'll use the store state as the scope, but we can use anythign
+    const scope = getState();
+    scope.init([
+    { id: "1", title: "Todo 1", complete: true, tag: "fun" },
         { id: "2", title: "Todo 2", complete: false, tag: "work" },
         { id: "3", title: "Todo 3", complete: false, tag: "adulting" },
         { id: "4", title: "Todo 4", complete: false, tag: "shopping" },
@@ -24,41 +63,7 @@
         { id: "11", title: "Todo 11", complete: false, tag: "work" },
         { id: "12", title: "Todo 12", complete: true, tag: "fun" },
         { id: "13", title: "Todo 13", complete: false, tag: "adulting" },
-      ],
-      getTags: () => g().todos.map((todo) => todo.tag),
-      addTodo: (todo) => s({ todos: [...g().todos, todo] }),
-
-      removeTodo: (id) =>
-        s({ todos: g().todos.filter((todo) => todo.id !== id) }),
-      updateTitle: (id, title) =>
-        s({
-          todos: g().todos.map((todo) =>
-            todo.id === id ? { ...todo, title } : todo
-          ),
-        }),
-      updateComplete: (id, complete) =>
-        s({
-          todos: g().todos.map((todo) =>
-            todo.id === id
-              ? {
-                  ...todo,
-                  complete,
-                }
-              : todo
-          ),
-        }),
-    }));
-    subscribe((state, prevState) => {
-      //  changing complete
-      if (state.todos.length !== prevState.todos.length) {
-        self.view_list.forEach((v) => v.render(state));
-      }
-    });
-    // render all the views
-
-    // we'll use the store state as the scope, but we can use anythign
-    const scope = getState();
-    self.view_list.forEach((v) => v.render(scope));
+    ])
     return scope;
   </script>
   <h2>Todo List</h2>
@@ -128,9 +133,9 @@
         </button>
       </div>
     </for>
-    <if check="it.todos.length == 0">
+    <if check="it.todos.length == 0 && it.initiated">
       <p>No todos</p>
-      <else/>
+      <else />
       {{it.todos.length}}
     </if>
   </adv-view>
