super easy barely an inconvenience

--- a/project/public/components/kit/like-button.html
+++ b/project/public/components/kit/like-button.html
@@ -25,7 +25,7 @@
       },
     }
   </script>
-  <div id="container" class="container">
+  <div ref="container" class="container">
     <button class="reaction">😠</button>
     <button class="reaction">🤯</button>
     <button class="reaction">😉</button>
