--- a/project/public/components/app/todo-component.html
+++ b/project/public/components/app/todo-component.html
@@ -67,16 +67,16 @@
     return scope;
   </script>
   <h2>Todo List</h2>
-  <button on id="add_todo_button" onclick="refs.new_todo_diag.showModal()">
+  <button on ref="add_todo_button" onclick="refs.new_todo_diag.showModal()">
     Add Todo
   </button>
-  <dialog id="new_todo_diag">
+  <dialog ref="new_todo_diag">
     <label for="new_todo_title">Title</label>
-    <input id="new_todo_title" type="text" name="new_todo_title" />
+    <input ref="new_todo_title" type="text" name="new_todo_title" />
     <label for="new_todo_complete">Complete</label>
-    <input id="new_todo_complete" type="checkbox" name="new_todo_complete" />
+    <input ref="new_todo_complete" type="checkbox" name="new_todo_complete" />
     <button
-      id="add_todo"
+      ref="add_todo"
       onclick="
       scope.addTodo({
          id: Math.random().toString(36).substr(2, 9),
@@ -88,47 +88,37 @@
     >
       Add
     </button>
-    <button id="cancel" onclick="refs.new_todo_diag.close()">Cancel</button>
+    <button ref="cancel" onclick="refs.new_todo_diag.close()">Cancel</button>
   </dialog>
-  <adv-view id="todos_view">
+  <adv-view ref="todos_view">
     <for data="it.todos" name="todo" index="todo_index">
-      <div
-        id="todo_{{todo.id}}"
-        data-id="{{todo.id}}"
-        class="transition-[all 2s] relative"
-      >
+      <div ref="todo_{{todo.id}}" class="transition-[all 2s] relative">
         <label for="title_input_{{todo.id}}">
           <input
-            id="title_input_{{todo.id}}"
+            ref="title_input_{{todo.id}}"
             type="text"
             name="title_input_{{todo.id}}"
             value="{{todo.title}}"
-            onchange="scope.updateTitle(el.dataset.id, el.value)"
+            onchange="scope.updateTitle('{{todo.id}}', el.value)"
           />
         </label>
 
         <label for="complete_{{todo.id}}">
           <input
-            id="complete_{{todo.id}}"
+            ref="complete_{{todo.id}}"
             name="complete_{{todo.id}}"
             type="checkbox"
             data-checked="{{todo.complete}}"
             onload="el.checked = el.dataset.checked === 'true'"
             onchange="{
-                const wrapper = el.closest('[data-id]');
-              scope.updateComplete(wrapper.dataset.id, el.checked);
+              scope.updateComplete('{{todo.id}}', el.checked);
             }"
           />
         </label>
-        <button
-          id="remove_{{todo.id}}"
-
-
-          onclick="{
+        <button ref onclick="{
               const wrapper = el.closest('[data-id]');
-              scope.removeTodo(wrapper.dataset.id);
-            }"
-        >
+              scope.removeTodo('{{todo.id}}');
+            }">
           X
         </button>
       </div>
