--- a/project/public/components/basic/eta-test.html
+++ b/project/public/components/basic/eta-test.html
@@ -1,5 +1,5 @@
 <template id="eta-test" adv>
-    <adv-view id="test"
+    <adv-view ref="test"
         onload="{
             el.render({
                 name: 'world',
