--- a/advect.io/Pages/Shared/_Layout.cshtml
+++ b/advect.io/Pages/Shared/_Layout.cshtml
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    @* htmx include *@
+  <script src="https://unpkg.com/htmx.org@2.0.1/dist/htmx.js"
+    integrity="sha384-gpIh5aLQ0qmX8kZdyhsd6jA24uKLkqIr1WAGtantR4KsS97l/NRBvh8/8OYGThAf"
+    crossorigin="anonymous"></script>
     <title>@ViewData["Title"] - advect.io</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/advect.io.styles.css" asp-append-version="true" />
@@ -23,6 +27,9 @@
         <li>
           <a href="#">Contact</a>
         </li>
+         <li>
+          <a href="#">Privacy</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -34,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - advect.io - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; @( DateTime.Now.Year ) - advect.io - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/js/site.js" asp-append-version="true"></script>
