yea bump cs for now

--- a/advect.io/Pages/Index.cshtml
+++ b/advect.io/Pages/Index.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Home page";
 }
   
-  <main>
     <style>
       @@scope{
         :scope{
@@ -38,13 +37,12 @@
       <div class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center">
         <div class="mx-auto max-w-xl text-center">
           <h1 class="text-3xl font-extrabold sm:text-5xl">
-            Understand User Flow.
-            <strong class="font-extrabold text-red-700 sm:block"> Increase Conversion. </strong>
+            Advect.js
+            <strong class="font-extrabold text-red-700 sm:block"> Build Web Components Faster! </strong>
           </h1>
 
           <p class="mt-4 sm:text-xl/relaxed">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt illo tenetur fuga ducimus
-            numquam ea!
+            Make web components without the hassle of setting up a build system. Advect.js is a simple, lightweight
           </p>
 
           <div class="mt-8 flex flex-wrap justify-center gap-4">
@@ -61,48 +59,54 @@
         </div>
       </div>
     </section>
-    <section class="container">
-      <article>
-        <h3>Wow</h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quam aspernatur veniam mollitia illum nulla,
-        quae cumque tenetur doloribus repellendus suscipit deleniti aut natus, itaque nobis reiciendis omnis obcaecati
-        beatae?
-      </article>
-      <todo-component></todo-component>
-    </section>
-    <section class="container">
-      <tw-button></tw-button>
-    </section>
-    <section class="container">
-      <pw-checker></pw-checker>
-    </section>
-    <section class="container">
-      <h2>counter</h2>
-      <simple-counter></simple-counter>
 
-   <img src="https://archives.bulbagarden.net/media/upload/thumb/d/dd/Boulder_Badge.png/50px-Boulder_Badge.png" />
-    </section>
-    <section class="container">
-      <adv-view>
-        <button class="w-[200px] bg-[blue] hover:bg-[dodgerblue]">hello</button>
-      </adv-view>
-    </section>
-    <section class="container">
-      <adv-view data-name="john" render="markdown">
-        # hello {{it.name}}
-        - a list
-        - of items
-      </adv-view>
-    </section>
-    <section class="container">
-      <eta-test>
-        
-      </eta-test>
-    </section>
-    <section class="container flex justify-center py-[100px]">
-      this is some text before
-      <like-button>
-      </like-button>
-      this is some text after
-    </section>
-  </main>
+  <section class="container">
+    <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8">
+  <div class="mx-auto max-w-3xl text-center">
+    <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl">Trusted by eCommerce Businesses</h2>
+
+    <p class="mt-4 text-gray-500 sm:text-xl">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolores laborum labore
+      provident impedit esse recusandae facere libero harum sequi.
+    </p>
+  </div>
+
+  <dl class="mt-6 grid grid-cols-1 gap-4 sm:mt-8 sm:grid-cols-2 lg:grid-cols-4">
+    <div class="flex flex-col rounded-lg bg-blue-50 px-4 py-8 text-center">
+      <dt class="order-last text-lg font-medium text-gray-500">Total Sales</dt>
+
+      <dd class="text-4xl font-extrabold text-blue-600 md:text-5xl">$4.8m</dd>
+    </div>
+
+    <div class="flex flex-col rounded-lg bg-blue-50 px-4 py-8 text-center">
+      <dt class="order-last text-lg font-medium text-gray-500">Official Addons</dt>
+
+      <dd class="text-4xl font-extrabold text-blue-600 md:text-5xl">24</dd>
+    </div>
+
+    <div class="flex flex-col rounded-lg bg-blue-50 px-4 py-8 text-center">
+      <dt class="order-last text-lg font-medium text-gray-500">Total Addons</dt>
+
+      <dd class="text-4xl font-extrabold text-blue-600 md:text-5xl">86</dd>
+    </div>
+
+    <div class="flex flex-col rounded-lg bg-blue-50 px-4 py-8 text-center">
+      <dt class="order-last text-lg font-medium text-gray-500">Downloads</dt>
+
+      <dd class="text-4xl font-extrabold text-blue-600 md:text-5xl">86k</dd>
+    </div>
+  </dl>
+</div>
+  </section>
+ <section class="container">
+    <h2>Installation</h2>
+    <code>
+      npm install advect
+    </code>
+ </section>
+ <section class="container">
+    <h2>API / Syntax</h2>
+    <code pre="html">
+      npm install advect
+    </code>
+ </section>
