--- a/project/public/components/basic/simple-counter.html
+++ b/project/public/components/basic/simple-counter.html
@@ -2,7 +2,7 @@
     <div class="flex justify-center items-center gap-4">
         <button ref="subtract" onclick="refs.counter.data.count--"> - </button>
         <adv-view ref="counter" onload="el.data.count = 0"> 
-            {{ it.count }}
+            {{= it.count }}
         </adv-view>
         <button ref="add" onclick="refs.counter.data.count++"> + </button>
     </div>
